<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="updateButtonClicked"
        android:text="@string/updateButton"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewCurrency" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCurrency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:paddingLeft="4dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:gravity="fill_vertical"
        android:text="@string/update_frequency"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textViewLimit"
        app:layout_constraintEnd_toStartOf="@id/spinnerFrequency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/apply_button"
        android:onClick="applyButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toTopOf="@id/buttonReset"/>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:onClick="resetButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonApply"
        app:layout_constraintStart_toStartOf="@+id/buttonApply"
        app:layout_constraintTop_toBottomOf="@+id/buttonApply" />

    <Spinner
        android:id="@+id/spinnerFrequency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/frequency"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimer"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textViewTimer"
        app:layout_constraintTop_toTopOf="@+id/textViewTimer" />

    <TextView
        android:id="@+id/textViewLimit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/text_view_limit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerLimit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />

    <Spinner
        android:id="@+id/spinnerLimit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/limit"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLimit"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/textViewLimit"
        app:layout_constraintTop_toTopOf="@+id/textViewLimit" />

</androidx.constraintlayout.widget.ConstraintLayout>